# chsc6417

./: Cargo.toml  README.md  code.csv
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc  nix-profile-25.05-7g9h6nlrx5h1lwqy  nix-profile-25.05-7g9h6nlrx5h1lwqy.rc
.direnv/flake-inputs/: b5ca4wi96xs8c99vz9djisahpdsy8ily-source
src/: chsc6417.rs  comp.rs  device.rs  error.rs  flashcode.rs  lib.rs  ramcode.rs
